--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "@vitejs/plugin-react": "^2.1.0",
+    "eslint": "^8.28.0",
+    "eslint-plugin-react": "^7.31.11",
+    "sass": "^1.56.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
